Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-77

Static builds broken

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Build
    • None

    Description

      On Mar 16, 2005, at 7:44 AM, Peter Steiner wrote: (log4cxx-dev)

      > Hello!
      >
      > I'm trying to integrate log4cxx into a new Visual Studio 2003 project
      > and tried to use the static library.
      >
      > Using the current CVS head (from 2005-03-15 16:00GMT), I have found
      > several problems:
      >
      > - INSTALL: typo in Build options description:
      > "-Dlibtype" instead of "-Dlib.type"
      > - During "ant -Dlib.type=static": build-shortsocketserver fails
      > (I have not investigated this as the library itself is built at this
      > time)
      > - msvc/static/static.cpp doesn't exist anymore,
      > but it is still referenced in config_msvc.h.in and portability.h
      > This leads to linker errors not finding ForceSymbolReferences.
      > After removing these #pragma comment lines in both files, I was
      > able to link and run my (very simple) test program.
      >
      > Is the static library still supported or are there reasons to avoid the
      > static library other than to save space?
      >

      Thanks for the report. Any breakage of the static build was due to
      neglect, not intent, and it is likely broken on all platforms. I'll
      see what I can do to get it functional again.

      If you are calling log4cxx from a DLL, then it would be beneficial to
      use the log4cxx.dll so both the application executable and application
      dll could share the same log system.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            3 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: