LOGCXX-77: static builds broken (windows iter)